# competitive-programming

./: .gitignore  CMakeCache.txt  CMakeLists.txt  biginteger  biginteger.cpp  biginteger.h  cmake_install.cmake  geometry.cpp  geometry.h  graph.cpp  graph.h  matemathics.h  mathematics.cpp  mathematics.h  mm.cpp  searching.cpp  sorting.cpp  util.cpp  util.h
.circleci/: config.yml
docker_image/g_test/: Dockerfile
include/: biginteger.h  geometry.h  graph.h  mathematics.h  mm.h  searching.h  sorting.h  util.h
src/: biginteger.cpp  geometry.cpp  graph.cpp  mathematics.cpp  mm.cpp  searching.cpp  sorting.cpp  util.cpp
test/: biginteger_test.cpp  geometry_test.cpp  graph_test.cpp  mathematics_test.cpp  searching_test.cpp  sorting_test.cpp  test.h  testall.cpp
