cmake_minimum_required(VERSION 2.6)

find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})

add_executable(searchTest test/test_runner.cpp test/searching_test.cpp src/searching.cpp)
add_executable(sortTest test/test_runner.cpp test/sorting_test.cpp src/sorting.cpp src/util.cpp)
add_executable(mathTest test/test_runner.cpp test/mathematics_test.cpp src/mathematics.cpp src/util.cpp)
add_executable(geoTest test/test_runner.cpp test/geometry_test.cpp src/geometry.cpp src/mm.cpp)
add_executable(bigIntegerTest test/test_runner.cpp test/biginteger_test.cpp src/biginteger.cpp)
add_executable(graphTest test/test_runner.cpp test/graph_test.cpp src/graph.cpp src/mm.cpp src/util.cpp)
add_executable(globalTest test/test_runner.cpp test/searching_test.cpp src/searching.cpp test/sorting_test.cpp src/sorting.cpp src/util.cpp test/mathematics_test.cpp src/mathematics.cpp test/geometry_test.cpp src/geometry.cpp test/biginteger_test src/biginteger.cpp src/mm.cpp test/graph_test.cpp src/graph.cpp)

target_link_libraries(searchTest ${GTEST_LIBRARIES} pthread)
target_link_libraries(sortTest ${GTEST_LIBRARIES} pthread)
target_link_libraries(mathTest ${GTEST_LIBRARIES} pthread)
target_link_libraries(geoTest ${GTEST_LIBRARIES} pthread)
target_link_libraries(bigIntegerTest ${GTEST_LIBRARIES} pthread)
target_link_libraries(graphTest ${GTEST_LIBRARIES} pthread)
target_link_libraries(globalTest ${GTEST_LIBRARIES} pthread)
